# eval

./: .gitignore  CMakeLists.txt  config.cmake.in  gen_cmake.py  gen_functions.c
.github/workflows/: build_and_test.yml
source/: CMakeLists.txt
source/eval/: CMakeLists.txt  arithmetic.h  data.inl.h  eval.h  functions.c  functions.h  options.h
source/peer/: CMakeLists.txt
source/test/integration/fetch_content/: CMakeLists.txt  main.c
source/test/integration/find_package/: CMakeLists.txt
source/test/integration/find_package/source/: CMakeLists.txt  main.c
source/test/unittests/: CMakeLists.txt  arithmetic.test.c  functions.test.c
